[tool.poetry]
name = "johnson-lindenstrauss"
version = "0.1.0"
description = ""
authors = ["lukejagg <lukejagg@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.4.0"
matplotlib = "^3.9.2"
tqdm = "^4.66.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
